--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,7 @@
                         </Implementation-Version>
                         <Implementation-Build>${gitVersion}/${buildNumber} (${maven.build.timestamp})
                         </Implementation-Build>
+                        <Tigase-Required-Dependencies>tigase.server=${project.dependencies[0].version}</Tigase-Required-Dependencies>
                         <Bundle-Activator>tigase.spam.Activator</Bundle-Activator>
                         <Export-Package>tigase.spam.*</Export-Package>
                     </instructions>
