#6163: updated groovy to version 2.5.2

--- a/pom.xml
+++ b/pom.xml
@@ -489,7 +489,7 @@
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-all</artifactId>
+            <artifactId>groovy</artifactId>
             <version>${groovyVersion}</version>
             <scope>compile</scope>
         </dependency>
