--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
     <properties>
         <bundle-activator>tigase.spam.Activator</bundle-activator>
         <bundle-export-package>tigase.spam.*</bundle-export-package>
+
+        <license.inlineHeader>${inlineHeader_agpl3}</license.inlineHeader>
     </properties>
 
     <artifactId>tigase-spam</artifactId>
