--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,11 @@
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>tigase</groupId>
         <artifactId>tigase-projects-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath/>
+        <version>1.0.0-RC1</version>
+        <relativePath />
     </parent>
 
     <properties>
@@ -17,7 +16,7 @@
     </properties>
 
     <artifactId>tigase-spam</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-RC1</version>
     <packaging>bundle</packaging>
 
     <name>Tigase Spam Filter</name>
@@ -41,7 +40,7 @@
         <connection>scm:git:${scm_repo_base}/tigase-spam</connection>
         <developerConnection>scm:git:${scm_repo_base}/tigase-spam</developerConnection>
         <url>https://projects.tigase.org/projects/tigase-spam/repository</url>
-        <tag>HEAD</tag>
+        <tag>tigase-spam-2.0.0-RC1</tag>
     </scm>
 
     <organization>
@@ -131,13 +130,13 @@
         <dependency>
             <groupId>tigase</groupId>
             <artifactId>tigase-server</artifactId>
-            <version>8.0.0-SNAPSHOT</version>
+            <version>8.0.0-RC1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>tigase</groupId>
             <artifactId>tigase-server</artifactId>
-            <version>8.0.0-SNAPSHOT</version>
+            <version>8.0.0-RC1</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
