--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>tigase</groupId>
         <artifactId>tigase-projects-parent</artifactId>
-        <version>1.0.0-RC1</version>
+        <version>1.0.0-SNAPSHOT</version>
         <relativePath />
     </parent>
 
@@ -16,7 +16,7 @@
     </properties>
 
     <artifactId>tigase-spam</artifactId>
-    <version>2.0.0-RC1</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <name>Tigase Spam Filter</name>
@@ -40,7 +40,7 @@
         <connection>scm:git:${scm_repo_base}/tigase-spam</connection>
         <developerConnection>scm:git:${scm_repo_base}/tigase-spam</developerConnection>
         <url>https://projects.tigase.org/projects/tigase-spam/repository</url>
-        <tag>tigase-spam-2.0.0-RC1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <organization>
@@ -130,13 +130,13 @@
         <dependency>
             <groupId>tigase</groupId>
             <artifactId>tigase-server</artifactId>
-            <version>8.0.0-RC1</version>
+            <version>8.0.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>tigase</groupId>
             <artifactId>tigase-server</artifactId>
-            <version>8.0.0-RC1</version>
+            <version>8.0.0-SNAPSHOT</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
