--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>tigase</groupId>
         <artifactId>tigase-projects-parent</artifactId>
-        <version>1.0.3</version>
+        <version>1.0.4-SNAPSHOT</version>
         <relativePath />
     </parent>
 
@@ -16,7 +16,7 @@
     </properties>
 
     <artifactId>tigase-spam</artifactId>
-    <version>2.1.0</version>
+    <version>2.2.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <name>Tigase Spam Filter</name>
@@ -40,7 +40,7 @@
         <connection>scm:git:${scm_repo_base}/tigase-spam</connection>
         <developerConnection>scm:git:${scm_repo_base}/tigase-spam</developerConnection>
         <url>https://projects.tigase.org/projects/tigase-spam/repository</url>
-        <tag>tigase-spam-2.1.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <organization>
