enable generating documentation; #prv-486

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
         <bundle-export-package>tigase.spam.*</bundle-export-package>
 
         <license.inlineHeader>${inlineHeader_agpl3}</license.inlineHeader>
+        
+        <guide_name>Tigase_SPAM</guide_name>
+        <documentation_phases.all_converters>generate-resources</documentation_phases.all_converters>
     </properties>
 
     <artifactId>tigase-spam</artifactId>
@@ -69,56 +72,6 @@
                                 <configuration>
                                     <doclint>none</doclint>
                                 </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>dist</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-                <property>
-                    <name>dist</name>
-                </property>
-            </activation>
-            <properties>
-                <maven.javadoc.skip>false</maven.javadoc.skip>
-                <guide_name>Tigase_SPAM</guide_name>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.asciidoctor</groupId>
-                        <artifactId>asciidoctor-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>output-html</id>
-                                <phase>generate-resources</phase>
-                            </execution>
-                            <execution>
-                                <id>output-docbook</id>
-                                <phase>generate-resources</phase>
-                            </execution>
-                        </executions>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>com.agilejava.docbkx</groupId>
-                        <artifactId>docbkx-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>generate-webhelp</id>
-                                <phase>generate-resources</phase>
-                            </execution>
-                            <execution>
-                                <id>generate-pdf</id>
-                                <phase>generate-resources</phase>
-                            </execution>
-                            <execution>
-                                <id>generate-html</id>
-                                <phase>generate-resources</phase>
                             </execution>
                         </executions>
                     </plugin>
