--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     </properties>
 
     <artifactId>tigase-spam</artifactId>
-    <version>2.1.0</version>
+    <version>2.1.1-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <name>Tigase Spam Filter</name>
