--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     </properties>
 
     <artifactId>tigase-spam</artifactId>
-    <version>2.2.0</version>
+    <version>2.3.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <name>Tigase Spam Filter</name>
@@ -43,7 +43,7 @@
         <connection>scm:git:${scm_repo_base}/tigase-spam</connection>
         <developerConnection>scm:git:${scm_repo_base}/tigase-spam</developerConnection>
         <url>https://projects.tigase.org/projects/tigase-spam/repository</url>
-        <tag>tigase-spam-2.2.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <organization>
