--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 *.ipr
 src/main/restructured/locale/pl/LC_MESSAGES/*.mo
 src/main/restructured/_build/
+src/main/restructured/locale/pl/LC_MESSAGES/Filter/*.mo
+
