--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /target/
 *.iml
 *.ipr
-src/main/restructured/locale/pl/LC_MESSAGES/*.mo
+src/main/restructured/locale/*/LC_MESSAGES/*.mo
 src/main/restructured/_build/
-src/main/restructured/locale/pl/LC_MESSAGES/Filter/*.mo
+src/main/restructured/locale/*/LC_MESSAGES/Filter/*.mo
 
